kyverno-networkpolicy-training/code/kyverno/tag07/pod-ohne-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nolabel
  namespace: shop
spec:
  containers:
    - name: web
      image: nginxinc/nginx-unprivileged:1.31-alpine
